--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.SpaceFlights" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/blue_2</item>
+        <item name="colorPrimary">@color/gray_light</item>
         <item name="colorPrimaryVariant">@color/blue_1</item>
         <item name="colorOnPrimary">@color/white</item>
 
